--- a/docs/source/_static/custom.css
+++ b/docs/source/_static/custom.css
@@ -1,5 +1,5 @@
-body {
-    height: 100vh;
+html {
+    overflow: hidden;
 }
 div.document {
     margin-top: 0;
@@ -12,6 +12,7 @@ div.bodywrapper {
     margin-left: 6rem;
     margin-right: 6rem;
     box-shadow: 0 0 50px 18px #e8e8e8;
+    overflow-y: hidden;
 }
 div.documentwrapper {
     background-color: #f5f5f5;
@@ -20,7 +21,7 @@ div.documentwrapper {
     color: rgb(73, 73, 73);
     display: block;
     overflow-x: hidden;
-    overflow-y: auto;
+    overflow-y: scroll;
     height: 100vh;
     min-width: 0;
     margin-left: 18rem;
