--- a/docs/source/_static/custom.css
+++ b/docs/source/_static/custom.css
@@ -2,6 +2,8 @@ div.nboutput.container div.output_area {
     overflow-x: hidden !important;
 }
 
+
+
 html {
     overflow: hidden;
 }
@@ -16,7 +18,6 @@ div.bodywrapper {
     margin-left: 6rem;
     margin-right: 6rem;
     box-shadow: 0 0 50px 18px #e8e8e8;
-    overflow-y: hidden;
     max-width: 65rem;
 }
 div.documentwrapper {
@@ -25,13 +26,13 @@ div.documentwrapper {
     box-sizing: border-box;
     color: rgb(73, 73, 73);
     display: block;
-    overflow-x: hidden;
-    overflow-y: scroll;
     height: 100vh;
     min-width: 0;
     margin-left: 18rem;
     width: auto;
     float: none;
+    overflow: hidden;
+    position: relative;
 }
 div.sphinxsidebar {
     background-color: rgb(55, 53, 61);
