fix ctrl f issue cont'

--- a/docs/source/_static/custom.css
+++ b/docs/source/_static/custom.css
@@ -31,7 +31,7 @@ div.documentwrapper {
     margin-left: 18rem;
     width: auto;
     float: none;
-    overflow: hidden;
+    overflow: auto;
     position: relative;
 }
 div.sphinxsidebar {
