--- a/docs/source/_static/custom.css
+++ b/docs/source/_static/custom.css
@@ -2,11 +2,14 @@ div.nboutput.container div.output_area {
     overflow-x: hidden !important;
 }
 
-
+.sphinxsidebarwrapper > p.caption {
+    font-size: 130%;
+}
 
 html {
     overflow: hidden;
 }
+
 div.document {
     margin-top: 0;
     margin-left: 0;
@@ -14,12 +17,14 @@ div.document {
     width: 100%;
     height: 100vh;
 }
+
 div.bodywrapper {
     margin-left: 6rem;
     margin-right: 6rem;
     box-shadow: 0 0 50px 18px #e8e8e8;
     max-width: 65rem;
 }
+
 div.documentwrapper {
     background-color: #f5f5f5;
     line-height: 1.5;
@@ -34,6 +39,7 @@ div.documentwrapper {
     overflow: auto;
     position: relative;
 }
+
 div.sphinxsidebar {
     background-color: rgb(32, 41, 90);
     box-sizing: border-box;
@@ -64,12 +70,12 @@ div.sphinxsidebar ul.want-points {
     list-style: none;
 }
 
-div.sphinxsidebarwrapper ul{
+div.sphinxsidebarwrapper ul {
     list-style: none;
 }
 
 div.sphinxsidebar a {
-    color:#EFF0F4;
+    color: #EFF0F4;
     border-bottom: none;
     text-decoration: none;
     text-decoration-style: solid;
@@ -102,6 +108,7 @@ a.current {
 div.sphinxsidebarwrapper a.current ul {
     color: #605C69
 }
+
 li.toctree-l1 {
     margin-left: 1rem;
 }
@@ -111,7 +118,7 @@ dl.method {
     margin-bottom: 15px;
 }
 
-.method > dt{
+.method > dt {
     background-color: #ebebeb;
 }
 
@@ -121,10 +128,47 @@ dl.field-list > dt {
     padding-left: 0;
     padding-right: 5px;
 }
+
 dt:target, .highlight {
     background: #d6daef;
 }
 
 dl.class > dt {
     background: #d6daef;
+}
+
+/* landing page css */
+
+.gallery {
+    margin: 5px;
+    border: 1px solid #ccc;
+    float: left;
+    width: 250px;
+    height: 250px;
+}
+
+div.gallery:hover {
+    border: 1px solid #777;
+}
+
+div.gallery img {
+    width: 100%;
+    height: 70%;
+    object-fit: contain;
+}
+
+.gallery .desc {
+    height: 30%;
+    text-align: center;
+}
+
+h1.logo{
+    display: none;
+}
+
+div.sphinxsidebarwrapper h1.logo_override {
+    margin-top: -10px;
+    text-align: center;
+    margin-bottom: 5px;
+    text-align: left;
 }
