--- a/docs/source/_static/custom.css
+++ b/docs/source/_static/custom.css
@@ -1,58 +1,16 @@
-div.nboutput.container div.output_area {
-    overflow-x: hidden !important;
-}
-
-.sphinxsidebarwrapper > p.caption {
-    font-size: 130%;
-}
-
-html {
-    overflow: hidden;
-}
-
-div.document {
-    margin-top: 0;
-    margin-left: 0;
-    margin-right: 0;
-    width: 100%;
-    height: 100vh;
-}
-
-div.bodywrapper {
-    margin-left: 6rem;
-    margin-right: 6rem;
-    box-shadow: 0 0 50px 18px #e8e8e8;
-    max-width: 65rem;
+h1.logo:nth-child(2) {
+    display: none;
 }
 
 div.documentwrapper {
     background-color: #f5f5f5;
     line-height: 1.5;
-    box-sizing: border-box;
     color: rgb(73, 73, 73);
-    display: block;
-    height: 100vh;
-    min-width: 0;
-    margin-left: 18rem;
-    width: auto;
-    float: none;
-    overflow: auto;
-    position: relative;
 }
 
 div.sphinxsidebar {
     background-color: rgb(32, 41, 90);
-    box-sizing: border-box;
     color: rgb(32, 41, 90);
-    display: block;
-    float: left;
-    overflow: hidden;
-    overflow-wrap: unset;
-    position: relative;
-    touch-action: auto;
-    width: 18rem;
-    height: 100vh;
-    -webkit-font-smoothing: antialiased;
 }
 
 div.sphinxsidebarwrapper {
@@ -60,30 +18,12 @@ div.sphinxsidebarwrapper {
 }
 
 .sphinxsidebarwrapper {
-    padding: 2rem 0;
     color: #d6daef;
-}
-
-div.sphinxsidebar ul ul,
-div.sphinxsidebar ul.want-points {
-    margin-left: 20px;
-    list-style: none;
-}
-
-div.sphinxsidebarwrapper ul {
-    list-style: none;
 }
 
 div.sphinxsidebar a {
     color: #EFF0F4;
-    border-bottom: none;
-    text-decoration: none;
-    text-decoration-style: solid;
     text-decoration-color: rgb(239, 240, 244);
-}
-
-div.sphinxsidebar a:hover {
-    border-bottom: none;
 }
 
 .sphinxsidebarwrapper a, .sphinxsidebarwrapper a:visited {
@@ -92,7 +32,6 @@ div.sphinxsidebar a:hover {
 
 .sphinxsidebarwrapper a:hover, .sphinxsidebarwrapper a:focus {
     color: #CAC0F0;
-    border-bottom: none;
 }
 
 .sphinxsidebarwrapper span, .sphinxsidebarwrapper h3, .sphinxsidebarwrapper .h4 {
@@ -101,32 +40,14 @@ div.sphinxsidebar a:hover {
 
 a.current {
     background-color: #2d397e;
-    box-sizing: border-box;
-    display: block;
 }
 
 div.sphinxsidebarwrapper a.current ul {
     color: #605C69
 }
 
-li.toctree-l1 {
-    margin-left: 1rem;
-}
-
-dl.method {
-    margin-top: 15px;
-    margin-bottom: 15px;
-}
-
 .method > dt {
     background-color: #ebebeb;
-}
-
-dl.field-list > dt {
-    font-weight: bold;
-    word-break: break-word;
-    padding-left: 0;
-    padding-right: 5px;
 }
 
 dt:target, .highlight {
@@ -137,8 +58,115 @@ dl.class > dt {
     background: #d6daef;
 }
 
-/* landing page css */
+@media screen and (min-width: 876px) {
 
+    div.nboutput.container div.output_area {
+        overflow-x: hidden !important;
+    }
+
+    .sphinxsidebarwrapper > p.caption {
+        font-size: 130%;
+    }
+
+    html {
+        overflow: hidden;
+    }
+
+    div.document {
+        margin-top: 0;
+        margin-left: 0;
+        margin-right: 0;
+        width: 100%;
+        height: 100vh;
+    }
+
+    div.bodywrapper {
+        margin-left: 6rem;
+        margin-right: 6rem;
+        box-shadow: 0 0 50px 18px #e8e8e8;
+        max-width: 65rem;
+    }
+
+    div.documentwrapper {
+        box-sizing: border-box;
+        display: block;
+        height: 100vh;
+        min-width: 0;
+        margin-left: 18rem;
+        width: auto;
+        float: none;
+        overflow: auto;
+        position: relative;
+    }
+
+    div.sphinxsidebar {
+        box-sizing: border-box;
+        display: block;
+        float: left;
+        overflow: hidden;
+        overflow-wrap: unset;
+        position: relative;
+        touch-action: auto;
+        width: 18rem;
+        height: 100vh;
+        -webkit-font-smoothing: antialiased;
+    }
+
+    div.sphinxsidebarwrapper {
+        background-color: rgb(32, 41, 90)
+    }
+
+    .sphinxsidebarwrapper {
+        padding: 2rem 0;
+    }
+
+    div.sphinxsidebar ul ul,
+    div.sphinxsidebar ul.want-points {
+        margin-left: 20px;
+        list-style: none;
+    }
+
+    div.sphinxsidebarwrapper ul {
+        list-style: none;
+    }
+
+    div.sphinxsidebar a {
+        border-bottom: none;
+        text-decoration: none;
+        text-decoration-style: solid;
+    }
+
+    div.sphinxsidebar a:hover {
+        border-bottom: none;
+    }
+
+    .sphinxsidebarwrapper a:hover, .sphinxsidebarwrapper a:focus {
+        border-bottom: none;
+    }
+
+    a.current {
+        box-sizing: border-box;
+        display: block;
+    }
+
+    li.toctree-l1 {
+        margin-left: 1rem;
+    }
+
+    dl.method {
+        margin-top: 15px;
+        margin-bottom: 15px;
+    }
+
+    dl.field-list > dt {
+        font-weight: bold;
+        word-break: break-word;
+        padding-left: 0;
+        padding-right: 5px;
+    }
+}
+
+/* landing page css */
 .gallery {
     margin: 5px;
     border: 1px solid #ccc;
@@ -160,15 +188,4 @@ div.gallery img {
 .gallery .desc {
     height: 30%;
     text-align: center;
-}
-
-h1.logo{
-    display: none;
-}
-
-div.sphinxsidebarwrapper h1.logo_override {
-    margin-top: -10px;
-    text-align: center;
-    margin-bottom: 5px;
-    text-align: left;
 }
