--- a/docs/source/_static/custom.css
+++ b/docs/source/_static/custom.css
@@ -226,3 +226,20 @@ div.gallery img {
     height: 30%;
     text-align: center;
 }
+div.tooltip {
+    position: absolute;
+    text-align: center;
+    width: 160px;
+    padding: 2px;
+    font: 12px sans-serif;
+    background: lightsteelblue;
+    border: 0px;
+    border-radius: 8px;
+    pointer-events: none;
+    display: block;
+    overflow: auto;
+}
+.link {
+    stroke: #999;
+    stroke-opacity: .6;
+}
