--- a/docs/source/_static/custom.css
+++ b/docs/source/_static/custom.css
@@ -226,7 +226,7 @@ div.gallery img {
     height: 30%;
     text-align: center;
 }
-div.tooltip {
+/*div.tooltip {
     position: absolute;
     text-align: center;
     width: 160px;
@@ -238,6 +238,18 @@ div.tooltip {
     pointer-events: none;
     display: block;
     overflow: auto;
+}*/
+div.tooltip {
+    position: absolute;
+    background-color: white;
+    max-width: 200px;
+    height: auto;
+    padding: 1px;
+    border-style: solid;
+    border-radius: 4px;
+    border-width: 1px;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, .5);
+    pointer-events: none;
 }
 .link {
     stroke: #999;
